--- a/style.css
+++ b/style.css
@@ -1,28 +1,43 @@
 .attribution {
-    font-size: 11px;
+    font-size: 0.6875em;
     text-align: center;
 }
 
 .attribution a {
     color: hsl(228, 45%, 44%);
+    text-decoration: none;
 }
 
 body {
     background-color: hsl(212, 45%, 89%);
     margin: 0;
-    box-sizing: border-box;
+    font-family: 'Outfit', Arial, Helvetica, sans-serif;
 }
 
 .container {
     background-color: hsl(0, 0%, 100%);
-    width: 375px;
     border-radius: 20px;
-    margin: 15vh auto;
-    padding: 2vh;
-    box-sizing: border-box;
+    margin: 15vh 8vw;
+    padding: 4vw;
 }
 
 .qr-code {
-    border-radius: 20px;
+    border-radius: 10px;
     width: 100%;
+}
+
+h1 {
+    color: hsl(218, 44%, 22%);
+    text-align: center;
+    font-size: 1.3em;
+    font-weight: 400;
+    margin: 4vw;
+}
+
+p {
+    color: hsl(220, 15%, 55%);
+    font-size: 0.9375em;
+    font-weight: 400;
+    text-align: center;
+    margin: 4vw;
 }
