--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .attribution {
-    font-size: 0.6875em;
+    font-size: 0.8em;
     text-align: center;
 }
 
@@ -40,4 +40,35 @@ p {
     font-weight: 400;
     text-align: center;
     margin: 4vw;
+}
+
+@media screen and (min-width: 1440px) {
+    .container {
+        background-color: hsl(0, 0%, 100%);
+        width: 20vw;
+        border-radius: 20px;
+        margin: 15vh auto;
+        padding: 1vw;
+    }
+
+    .qr-code {
+        border-radius: 10px;
+        width: 100%;
+    }
+
+    h1 {
+        color: hsl(218, 44%, 22%);
+        text-align: center;
+        font-size: 1.3em;
+        font-weight: 700;
+        margin: 1vw;
+    }
+
+    p {
+        color: hsl(220, 15%, 55%);
+        font-size: 0.9375em;
+        font-weight: 700;
+        text-align: center;
+        margin: 1vw;
+    }
 }
