--- a/style.css
+++ b/style.css
@@ -14,11 +14,17 @@ body {
     font-family: 'Outfit', Arial, Helvetica, sans-serif;
 }
 
-.container {
+.flex-container {
+    display: flex;
+    justify-content: center;    
+}
+
+.component-background {
+    width: 100vw;
     background-color: hsl(0, 0%, 100%);
     border-radius: 20px;
-    margin: 15vh 8vw;
-    padding: 4vw;
+    margin: 80px 15px;
+    padding: 15px;
 }
 
 .qr-code {
@@ -30,8 +36,8 @@ h1 {
     color: hsl(218, 44%, 22%);
     text-align: center;
     font-size: 1.3em;
-    font-weight: 400;
-    margin: 4vw;
+    font-weight: 700;
+    margin: 15px;
 }
 
 p {
@@ -39,21 +45,20 @@ p {
     font-size: 0.9375em;
     font-weight: 400;
     text-align: center;
-    margin: 4vw;
+    margin: 15px;
 }
-
+/*
 @media screen and (min-width: 1440px) {
     .container {
         background-color: hsl(0, 0%, 100%);
-        width: 20vw;
+        width: 280px;
         border-radius: 20px;
-        margin: 15vh auto;
-        padding: 1vw;
+        margin: 100px auto;
+        padding: 20px;
     }
 
     .qr-code {
         border-radius: 10px;
-        width: 100%;
     }
 
     h1 {
@@ -61,7 +66,7 @@ p {
         text-align: center;
         font-size: 1.3em;
         font-weight: 700;
-        margin: 1vw;
+        margin: 9px;
     }
 
     p {
@@ -71,4 +76,4 @@ p {
         text-align: center;
         margin: 1vw;
     }
-}   
+}   */
