--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .attribution {
-    font-size: 0.8em;
+    font-size: 1rem;
     text-align: center;
+    margin-bottom: 2vh;
 }
 
 .attribution a {
@@ -11,7 +12,7 @@
 body {
     background-color: hsl(212, 45%, 89%);
     margin: 0;
-    font-family: 'Outfit', Arial, Helvetica, sans-serif;
+    font-family: 'Outfit', Arial, sans-serif;
 }
 
 .flex-container {
@@ -20,10 +21,10 @@ body {
 }
 
 .component-background {
-    width: 100vw;
+    max-width: 300px;
     background-color: hsl(0, 0%, 100%);
     border-radius: 20px;
-    margin: 80px 15px;
+    margin: 20vh 7vw;
     padding: 15px;
 }
 
@@ -35,45 +36,14 @@ body {
 h1 {
     color: hsl(218, 44%, 22%);
     text-align: center;
-    font-size: 1.3em;
+    font-size: 1.5em;
     font-weight: 700;
-    margin: 15px;
 }
 
 p {
-    color: hsl(220, 15%, 55%);
-    font-size: 0.9375em;
-    font-weight: 400;
+    color: hsl(214, 6%, 57%);
     text-align: center;
-    margin: 15px;
+    font-size: 1em;
+    font-weight: 400;
+    padding: 0 10px;
 }
-/*
-@media screen and (min-width: 1440px) {
-    .container {
-        background-color: hsl(0, 0%, 100%);
-        width: 280px;
-        border-radius: 20px;
-        margin: 100px auto;
-        padding: 20px;
-    }
-
-    .qr-code {
-        border-radius: 10px;
-    }
-
-    h1 {
-        color: hsl(218, 44%, 22%);
-        text-align: center;
-        font-size: 1.3em;
-        font-weight: 700;
-        margin: 9px;
-    }
-
-    p {
-        color: hsl(220, 15%, 55%);
-        font-size: 0.9375em;
-        font-weight: 700;
-        text-align: center;
-        margin: 1vw;
-    }
-}   */
